# fronius-exporter

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.github/workflows/: build-publish.yml  helm-publish.yml  test.yml
charts/: Chart.yaml  README.md  values.yaml
charts/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
charts/templates/tests/: test-connection.yaml
config/: prometheus.yml
dashboards/: README.md  fronius.json
mock/: lefty-components-BatteryManagementSystem-readable.json  lefty-components-cache-readable.json  lefty-status-powerflow.json  righty-components-BatteryManagementSystem-readable.json  righty-components-cache-readable.json  righty-status-powerflow.json
src/: main.rs  models.rs
tests/: get_servers_test.rs  health_endpoint_test.rs  health_unit_test.rs  integration_test.rs  startup_test.rs
